// Copyright (c) Abstract Machines
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package domains.v1;
option go_package = "github.com/absmach/supermq/api/grpc/domains/v1";


// DomainsService is a service that provides access to
// domains functionalities for SuperMQ services.
service DomainsService {
  rpc DeleteUserFromDomains(DeleteUserReq) returns (DeleteUserRes) {}
  rpc RetrieveDomainStatus(RetrieveDomainStatusReq) returns (RetrieveDomainStatusRes) {}
}

message DeleteUserRes {
  bool deleted = 1;
}

message DeleteUserReq{
  string id          = 1;
}

message RetrieveDomainStatusReq {
  string id          = 1;
}

message RetrieveDomainStatusRes {
  string status      = 2;
}